unpackaged/main/default/objects/Picture__c/Picture__c.object-meta.xml
<CustomObject>
    <description>This object stores the pictures of the users.</description>
    <label>Picture</label>
    <nameField>
        <displayFormat>P-{00000000}</displayFormat>
        <label>Picture Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pictures</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>