unpackaged/main/default/objects/Picture__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines if the picture is active or not.</description>
    <inlineHelpText>Defines if the picture is active or not.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>