unpackaged/main/default/objects/Picture__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <description>This field defines the order of the pictures related to the user.</description>
    <inlineHelpText>This field defines the order of the pictures related to the user.</inlineHelpText>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>