unpackaged/main/default/objects/Picture__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <description>URL de la imágen.</description>
    <inlineHelpText>URL de la imágen.</inlineHelpText>
    <label>URL</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>