unpackaged/main/default/objects/Picture__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>User owner of the pictures.</description>
    <inlineHelpText>User owner of the pictures.</inlineHelpText>
    <label>User</label>
    <referenceTo>User__c</referenceTo>
    <relationshipLabel>Pictures</relationshipLabel>
    <relationshipName>Pictures</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>